# fast_async_trait

./: Cargo.toml  Makefile  README.md
proc/: Cargo.toml
proc/src/: def.rs  imp.rs  lib.rs
proc/tests/: main.rs
src/: lib.rs
tests/: main.rs
