[package]
name = "fast_async_trait"
description = "Fast async traits for Rust"
license = "MIT"
authors = ["Alex Andreba <aandrebafreelancer@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_async_trait_proc = { path = "proc", version = "0.1.0" }

[dev-dependencies]
futures = "0.3.25"

[workspace]
members = ["proc"]