[package]
name = "fast_async_trait_proc"
authors = ["Alex Andreba <aandrebafreelancer@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1.5"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }